# OpenNiri-Windows

./: AGENTS.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  HANDOFF.md  ISSUES.md  OpenCode.md  README.md  SESSION_LOG.md  TASK_BOARD.md
.cargo/: config.toml
.github/workflows/: ci.yml
0_Research/: Research Options xAI Grok - Twitter.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core_layout/: Cargo.toml
crates/core_layout/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  main.rs  tray.rs
crates/daemon/tests/: integration.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/platform_win32/: Cargo.toml
crates/platform_win32/src/: lib.rs  overlay.rs
docs/: ARCHITECTURE.md  PUBLIC_READINESS_CHECKLIST.md  SPEC.md  WINDOWS_CONSTRAINTS.md
docs/0_Research/: Research Options GPT 5.2 PRO.md
docs/1_Progress and review/: CLAUDE_REVIEW.md  CODEX_REVIEW_CONSOLIDATED.md  CODEX_REVIEW_CYCLE_3.md  CODEX_REVIEW_CYCLE_4.md  ITERATION_LOG.md  OpenNiri-Windows-Claude-Code.txt  OpenNiri-Windows-Claude-Code_2.txt  OpenNiri-Windows-Claude-Code_3.txt  OpenNiri-Windows-Claude-Code_4.txt  OpenNiri-Windows-Claude-Code_5.txt  OpenNiri-Windows-Claude-Code_6.txt  OpenNiri-Windows-Claude-Code_7.txt  OpenNiri-Windows-Claude-Code_8.1.txt  OpenNiri-Windows-Claude-Code_8.2.txt  OpenNiri-Windows-Claude-Code_8.3.txt
docs/1_Progress and review/archive/: 2026-02-06_CODEX_QA_ARCH_REVIEW_CYCLE_5.md  2026-02-06_CODEX_REVIEW_CYCLE_6.md
reviews/: README.md
reviews/templates/: findings.template.json  findings.template.md  gate_results.template.md  reviewer_handoff.template.md  snapshot_manifest.template.json
sandbox/: OpenNiri.wsb  start.ps1
