[workspace]
resolver = "2"
members = [
    "crates/core_layout",
    "crates/platform_win32",
    "crates/ipc",
    "crates/daemon",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/AdEx-Partners-DE/OpenNiri-Windows"
authors = ["AdEx Partners <stark.burns@adexpartners.com>"]

[workspace.dependencies]
# Win32 bindings
windows = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Configuration
toml = "0.8"
directories = "5"
