[package]
name = "openniri-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for controlling OpenNiri"

[[bin]]
name = "openniri-cli"
path = "src/main.rs"

[dependencies]
openniri-ipc = { path = "../ipc" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
winreg = "0.55"

[dev-dependencies]
