[package]
name = "openniri-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Main daemon process for OpenNiri window manager"

[[bin]]
name = "openniri"
path = "src/main.rs"

[dependencies]
openniri-core-layout = { path = "../core_layout" }
openniri-platform-win32 = { path = "../platform_win32" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
