[package]
name = "openniri-platform-win32"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows platform integration for OpenNiri (HWND manipulation, DWM cloaking)"

[dependencies]
openniri-core-layout = { path = "../core_layout" }
windows = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
